# gndctrl

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  setup.py
adapters/: README.md
adapters/claude/: agent-contract.md  single-mode-contract.md
adapters/gemini/: agent-contract.md
cli/: README.md
docker/: README.md
docs/: AGENT-SETUP.md  how-it-works.md
docs/contracts/: fleet-mode-contract.md  single-mode-contract.md
docs/design/: README.md  design-init-analyze.md  design-preflight-task.md  harness-level-enforcement.md  pchisel-harness-gate.md
github-action/: README.md
hooks/: README.md  atc-edit-gate.py  atc-ops-gate.py  atc-ops-hazards.sample.json  atc-session-start.py  gndctrl-ops-gate.py  gndctrl-ops-hazards.sample.json
spec/: example-master.gndctrl  example-project.gndctrl  example-real-world.gndctrl  gndctrl-spec-v0.1.0.md
src/gndctrl/: auditor.py  cli.py  init_cmd.py  lockfile.py  models.py  parser.py  preflight.py  schema.py
