[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gndctrl"
version = "0.1.0"
description = "Zone-based governance and enforcement layer for AI agents in codebases"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
gndctrl = "gndctrl.cli:main"

[project.urls]
Repository = "https://github.com/internetsguy/gndctrl"

[tool.setuptools.packages.find]
where = ["src"]
