[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gndctrl"
version = "0.1.0"
description = "Zone-based governance and enforcement layer for AI agents in codebases"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
gndctrl = "gndctrl.cli:main"

[project.urls]
Repository = "https://github.com/internetsguy/gndctrl"
Documentation = "https://github.com/internetsguy/gndctrl/blob/master/docs/how-it-works.md"

[tool.setuptools.packages.find]
where = ["src"]
